@@ -1,3 +1,7 @@
+SimpleComplex/Utils 1.x, 2018-06-16
+-----------------------------------
+- PathFileList constructor allow leading dot in requireExtensions.
+
 SimpleComplex/Utils 1.x, 2018-06-14
 -----------------------------------
 - PathFileList didn't match long extensions exactly.
